@@ -24,7 +24,6 @@
  */
 package net.runelite.client.plugins.cluescrolls.clues;
 
-import com.google.common.collect.ImmutableSet;
 import java.awt.Color;
 import java.awt.Graphics2D;
 import java.util.Set;
@@ -42,7 +41,7 @@ import net.runelite.client.ui.overlay.components.TitleComponent;
 @Getter(AccessLevel.PUBLIC)
 public class FairyRingClue extends ClueScroll implements TextClueScroll, LocationClueScroll
 {
-	private static final Set<FairyRingClue> CLUES = ImmutableSet.of(
+	private static final Set<FairyRingClue> CLUES = Set.of(
 		new FairyRingClue("A I R 2 3 3 1", new WorldPoint(2702, 3246, 0)),
 		new FairyRingClue("A I Q 0 4 4 0", new WorldPoint(3000, 3110, 0)),
 		new FairyRingClue("A L P 1 1 4 0", new WorldPoint(2504, 3633, 0)),
